extends Node3D


func _ready():
	add_highlight()

func add_highlight()-> void:
	pass
func remove_highlight()-> void:
	pass

func _on_interactable_mouse_entered():
	pass # Replace with function body.


func _on_interactable_mouse_exited():
	pass # Replace with function body.


func _on_interactable_focused():
	pass # Replace with function body.


func _on_interactable_interacted():
	pass # Replace with function body.


func _on_interactable_unfocused():
	pass # Replace with function body.
